@@ -5,9 +5,15 @@ const joi = require('joi');
 const semver = require('semver');
 const util = require('util');
 const joinPath = require('path').join;
-const arangodb = require('@arangodb');
-const ArangoError = arangodb.ArangoError;
-const errors = arangodb.errors;
+const {
+  plainServerVersion,
+  ArangoError,
+  errors: {
+    ERROR_INVALID_SERVICE_MANIFEST,
+    ERROR_SERVICE_MANIFEST_NOT_FOUND,
+    ERROR_MALFORMED_MANIFEST_FILE
+  }
+} = require('@arangodb');
 const il = require('@arangodb/util').inline;
 
 // Regular expressions for joi patterns
@@ -155,7 +161,7 @@ const manifestSchema = {
 };
 
 function checkManifest (filename, inputManifest, mount, complainAboutVersionMismatches) {
-  const serverVersion = arangodb.plainServerVersion();
+  const serverVersion = plainServerVersion();
   const errors = [];
   const manifest = {};
   let legacy = false;
@@ -267,9 +273,9 @@ function checkManifest (filename, inputManifest, mount, complainAboutVersionMism
       console.errorLines(error);
     }
     throw new ArangoError({
-      errorNum: errors.ERROR_INVALID_SERVICE_MANIFEST.code,
+      errorNum: ERROR_INVALID_SERVICE_MANIFEST.code,
       errorMessage: dd`
-        ${errors.ERROR_INVALID_SERVICE_MANIFEST.message}
+        ${ERROR_INVALID_SERVICE_MANIFEST.message}
         Manifest for service at "${mount}":
         ${errors.join('\n')}
       `
@@ -309,9 +315,9 @@ function validateManifestFile (filename, mount, complainAboutVersionMismatches) 
   let mf;
   if (!fs.exists(filename)) {
     throw new ArangoError({
-      errorNum: errors.ERROR_SERVICE_MANIFEST_NOT_FOUND.code,
+      errorNum: ERROR_SERVICE_MANIFEST_NOT_FOUND.code,
       errorMessage: dd`
-        ${errors.ERROR_SERVICE_MANIFEST_NOT_FOUND.message}
+        ${ERROR_SERVICE_MANIFEST_NOT_FOUND.message}
         File: ${filename}
       `
     });
@@ -321,27 +327,15 @@ function validateManifestFile (filename, mount, complainAboutVersionMismatches) 
   } catch (e) {
     throw Object.assign(
       new ArangoError({
-        errorNum: errors.ERROR_MALFORMED_MANIFEST_FILE.code,
+        errorNum: ERROR_MALFORMED_MANIFEST_FILE.code,
         errorMessage: dd`
-          ${errors.ERROR_MALFORMED_MANIFEST_FILE.message}
+          ${ERROR_MALFORMED_MANIFEST_FILE.message}
           File: ${filename}
         `
       }), {cause: e}
     );
   }
-  try {
-    mf = checkManifest(filename, mf, mount, complainAboutVersionMismatches);
-  } catch (e) {
-    throw Object.assign(
-      new ArangoError({
-        errorNum: errors.ERROR_INVALID_SERVICE_MANIFEST.code,
-        errorMessage: dd`
-          ${errors.ERROR_INVALID_SERVICE_MANIFEST.message}
-          File: ${filename}
-        `
-      }), {cause: e}
-    );
-  }
+  mf = checkManifest(filename, mf, mount, complainAboutVersionMismatches);
   return mf;
 }
 
